settings divided into categories

--- a/components/googlemap/default.htm
+++ b/components/googlemap/default.htm
@@ -1,4 +1,4 @@
-<div id="google-map" style="width:{{__SELF__.getWidth}};height:{{__SELF__.getHeight}};background-color:red;">
+<div id="google-map" style="width:{{__SELF__.getWidth}};height:{{__SELF__.getHeight}};">
 </div>
 
 <script>
